<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diabetic\'s Log</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_log_entry">NewLogEntry</string>
    <string name="title_activity_log_item_list">LogItemList</string>
    <string name="title_activity_new_med_entry">NewMedEntry</string>
    <string name="title_activity_reminder">Reminder</string>
    <string name="title_activity_edit_med_entry">EditMedEntry</string>
    <string name="title_activity_edit_doc_info">EditDocInfo</string>
    <string name="title_activity_view_doc_info">ViewDocInfo</string>
    <string name="title_activity_med_list">MedList</string>
    <string name="title_activity_reminder_list">ReminderList</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_view_log_entry">ViewLogEntry</string>
    <string name="new_log_entry">New Log Entry</string>
    <string name="view_log_item_list">View Log Item List</string>
    <string name="view_medication_list">View Medication List</string>
    <string name="view_doctor_s_info">View Doctor\'s Info</string>
    <string name="today_s_date_">Today\'s Date:</string>
    <string name="date_hint">10/13/2013</string>
    <string name="current_time_">Current Time:</string>
    <string name="time_hint">10:00am</string>
    <string name="blood_sugar_reading_">Blood Sugar Reading:</string>
    <string name="reading_hint">95</string>
    <string name="reason_for_entry_">Reason for Entry:</string>
    <string name="reason_hint">Scheduled</string>
    <string name="save_log_entry">Save Log Entry</string>
    <string name="delete_log_entry">Delete Log Entry</string>
    <string name="doc_address_hint">Diabetic Doctors of America\r\n123 Any Street\r\nAnywhere, Texas 75009</string>
    <string name="doctor_s_name_">Doctor\'s Name:</string>
    <string name="dr_name_hint">Dr. John Smith</string>
    <string name="phone_number_">Phone Number:</string>
    <string name="dr_phone_hint">214-555-1212</string>
    <string name="doctor_s_office_">Doctor\'s Office:</string>
    <string name="please_edit_this_in_settings_">Please Edit This in Settings.</string>
    <string name="save_doctor_info">Save Doctor Info</string>
    <string name="update_medication">Update Medication</string>
    <string name="med_qty_hint">1 pills in Morning 1 pills in Afternoon</string>
    <string name="qty_to_take_">Qty. to Take:</string>
    <string name="med_name_hint">Medication #1</string>
    <string name="medication_name_">Medication Name:</string>
    <string name="save_new_medication">Save New Medication</string>
    <string name="manage_reminders">Manage Reminders</string>
    <string name="edit_doctor_s_information">Edit Doctor\'s Information</string>
    <string name="email_support_team">Email Support Team</string>
    <string name="visit_f_a_q_website">Visit F.A.Q. Website</string>
    <string name="blood_sugar_units">Blood Sugar Units</string>
    <string name="mg_dl">mg/dL</string>
    <string name="mmol_l">mmol/L</string>
    <string name="reminders">Reminders</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="sound_vibrate">Sound &amp; Vibrate</string>
    <string name="reminder_alert_type">Reminder Alert Type</string>
    <string name="sound_only">Sound Only</string>
    <string name="vibrate_only">Vibrate Only</string>
    <string name="am_medication">AM Medication</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="_8_00am">8:00am</string>
    <string-array name="log_item_title">
        <item>Log Item 1</item>
        <item>Log Item 2</item>
        <item>Log Item 3</item>
        <item>Log Item 4</item>
        <item>Log Item 5</item>
        <item>Log Item 6</item>
        <item>Log Item 7</item>
        <item>Log Item 8</item>
        <item>Log Item 9</item>
        <item>Log Item 10</item>
    </string-array>
    <string-array name="log_item_time">
        <item>8:00am</item>
        <item>12:00pm</item>
        <item>6:00pm</item>
        <item>9:00am</item>
        <item>1:00pm</item>
        <item>7:00pm</item>
        <item>7:30am</item>
        <item>12:30pm</item>
        <item>9:00pm</item>
        <item>8:30am</item>
    </string-array>
    <string-array name="med_item_title">
        <item>Medication 1</item>
        <item>Medication 2</item>
        <item>Medication 3</item>
        <item>Medication 4</item>
        <item>Medication 5</item>
        <item>Medication 6</item>
        <item>Medication 7</item>
        <item>Medication 8</item>
        <item>Medication 9</item>
        <item>Medication 10</item>
    </string-array>
    <string-array name="med_item_qty">
        <item>1am 1pm</item>
        <item>2pm</item>
        <item>1am</item>
        <item>1am 1pm</item>
        <item>1pm</item>
        <item>1am 1pm</item>
        <item>1pm</item>
        <item>1pm</item>
        <item>1am 1pm</item>
        <item>1am 1pm</item>
    </string-array>
    <string-array name="reminder_item_title">
        <item>Reminder 1</item>
        <item>Reminder 2</item>
        <item>Reminder 3</item>
        <item>Reminder 4</item>
        <item>Reminder 5</item>
        <item>Reminder 6</item>
        <item>Reminder 7</item>
        <item>Reminder 8</item>
        <item>Reminder 9</item>
        <item>Reminder 10</item>
    </string-array>
    <string-array name="reminder_item_time">
        <item>8:00am</item>
        <item>12:00pm</item>
        <item>6:00pm</item>
        <item>9:00am</item>
        <item>1:00pm</item>
        <item>7:00pm</item>
        <item>7:30am</item>
        <item>12:30pm</item>
        <item>9:00pm</item>
        <item>8:30am</item>
    </string-array>
        <string name="save_reminder">Save Reminder</string>
        <string name="change_time">Change Time</string>
        <string name="change_date">Change Date</string>

</resources>
