<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#008080"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Reminder" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
        android:orientation="vertical">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:textColor="@android:color/white"
	        android:text="@string/reminder_title"/>
	    <EditText 
	        android:id="@+id/reminderTitleField"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@android:color/white"
	        android:hint="@string/am_medication"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_marginBottom="20dp"
        android:orientation="vertical">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:textColor="@android:color/white"
	        android:text="@string/reminder_time"/>
	    <EditText 
	        android:id="@+id/reminderTimeField"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@android:color/white"
	        android:hint="@string/_8_00am"/>
	    <Button 
	        android:id="@+id/changeTimeButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@android:color/darker_gray"
		    android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:text="@string/change_time"
		    android:textColor="@android:color/white"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:textColor="@android:color/white"
	        android:text="@string/reminder_alert_type"/>
    
    <RadioGroup 
        	android:id="@+id/rdo_group"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        <RadioButton 
	            android:id="@+id/radio_snd_vib"
	 			android:checked="true"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/sound_vibrate"
	            android:textColor="@android:color/white"
	            />
	        <RadioButton 
	            android:id="@+id/radio_snd_only"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/sound_only"
	            android:textColor="@android:color/white"
	            />
	        <RadioButton 
	            android:id="@+id/radio_vib_only"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/vibrate_only"
	            android:textColor="@android:color/white"
	            />
	    </RadioGroup>
    </LinearLayout>
    
    <Button 
		    android:id="@+id/saveReminderButton"
		    android:layout_marginTop="5dp"
		    android:layout_marginBottom="10dp"
		    android:layout_width="match_parent"
		    android:layout_height="80dp"
		    android:background="@android:color/darker_gray"
		    android:text="@string/save_reminder"
		    android:textColor="@android:color/white"/>

</LinearLayout>
