<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#008080"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewDocInfo" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:textColor="@android:color/white"
	        android:text="@string/doctor_s_name_"/>

	    <TextView
	        android:id="@+id/drNameFieldView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/dr_name_hint"
	        android:textColor="@android:color/white"
	        android:textSize="20sp" />

    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:textColor="@android:color/white"
	        android:text="@string/phone_number_"/>
	    <TextView 
	        android:id="@+id/drNumFieldView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@android:color/white"
	        android:text="@string/dr_phone_hint"
	        android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:textColor="@android:color/white"
	        android:text="@string/doctor_s_office_"/>
	    <TextView 
	        android:id="@+id/docAddressFieldView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@android:color/white"
	        android:text="@string/doc_address_hint"
	        android:textSize="20sp" />
    </LinearLayout>
    
    <Button
        	android:id="@+id/editDocInfoFromViewButton" 
	        android:layout_marginTop="10dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@android:color/white"
	        android:textAlignment="center"
	        android:background="@android:color/darker_gray"
	        android:text="@string/edit_doctor_s_information"
	        android:textSize="20sp" />
    

</LinearLayout>
